--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.tutorialmod.pink_garnet": "Pink Garnet",
   "item.tutorialmod.raw_pink_garnet": "Raw Pink Garnet",
   "item.tutorialmod.chisel": "Chisel",
+  "item.tutorialmod.cauliflower": "Cauliflower",
+  "item.tutorialmod.starlight_ashes": "Starlight Ashes",
 
 
   "block.tutorialmod.pink_garnet_block": "Pink Garnet Block",
@@ -12,5 +14,14 @@
 
 
   "itemgroup.tutorialmod.pink_garnet_items": "Pink Garnet Items",
-  "itemgroup.tutorialmod.pink_garnet_blocks": "Pink Garnet Blocks"
+  "itemgroup.tutorialmod.pink_garnet_blocks": "Pink Garnet Blocks",
+
+
+  "tooltip.tutorialmod.magic_block": "This Block is very, very §9MAGICAL§r!",
+  "tooltip.tutorialmod.magic_block2": "Really!",
+
+  "tooltip.tutorialmod.chisel.shift_down": "This Item chisels blocks into Bricks or cleaner Variants! ",
+  "tooltip.tutorialmod.chisel": "Press §eShift§r for more Information!",
+
+  "tooltip.tutorialmod.cauliflower": "This is delicious!"
 }
