--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -11,6 +11,7 @@
   "item.tutorialmod.pink_garnet_hoe": "Pink Garnet Hoe",
   "item.tutorialmod.pink_garnet_sword": "Pink Garnet Sword",
   "item.tutorialmod.pink_garnet_hammer": "Pink Garnet Hammer",
+  "item.tutorialmod.kaupen_bow": "Kaupen Bow",
 
   "item.tutorialmod.pink_garnet_helmet": "Pink Garnet Helmet",
   "item.tutorialmod.pink_garnet_chestplate": "Pink Garnet Chestplate",
